tdf#113923: don't use twice a new column in table copy

In the case where:
1: we enabled the creation of a primary key
2: we come back here from the "Back" button of the next page,
we want to avoid to list the new column generated in the next page

So we must check added columns in right panel must exist in the table

Change-Id: I467007941b03811381a216c1ab3de8fe729f9b9b
(cherry picked from commit c2bc2c4633e92349cac390c05d245d1a812986c4)
Reviewed-on: https://gerrit.libreoffice.org/47708
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>
Tested-by: Jenkins <ci@libreoffice.org>